--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,3 +11,4 @@ build_script:
     cd %APPVEYOR_BUILD_FOLDER%
     nuget restore
     msbuild /t:build /p:config=release contract.sln /v:diag
+test: off
