--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,5 +10,5 @@ build_script:
     set PATH=%cd%\neon\bin\release\netcoreapp1.0\win10-x64;%PATH%
     cd %APPVEYOR_BUILD_FOLDER%
     nuget restore
-    msbuild /t:build /p:config=release contract.sln /v:diag /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
+    msbuild /t:build /p:config=release contract.sln /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll" /v:m 
 test: off
